# programacionweb

Eventos_app/: README.md  pyproject.toml
Eventos_app/src/eventos_app/: __init__.py  app.py  data.py  forms.py
Eventos_app/src/eventos_app/static/: styles.css
Eventos_app/src/eventos_app/templates/: create_event.html  index.html  register.html
ejercicios/: README.md  matrizReina.py
eventos_app/: pyproject.toml
eventos_app/src/eventos_app/: __init__.py  app.py
eventos_app/src/eventos_app/templates/: base.html  category_events.html  event_detail.html  index.html
